--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 </head>
 
 <body>
-    <label class="form-label h2">Sort Algorithm Simulator</label>
-    <div class="mb-3">
+    <label class="form-label h2 text-capitalize">sort algorithm simulator</label>
+    <div class="mb-2">
         <div class="form-check form-check-inline">
             <input class="form-check-input" type="radio" name="choiceSort" value="selection" id="choiceSelection"
                 checked>
@@ -41,6 +41,7 @@
             </label>
         </div>
     </div>
+    <div class="fs-6 mb-3 fw-light text-danger font-monospace"><i class="fa-duotone fa-asterisk"></i> This simulator sort by ascending order.</div>
     <div class="mb-3">
         <button type="button" class="btn btn-warning" id="btnReset">
             <i class="fa-solid fa-rotate-right"></i> Reset
@@ -59,10 +60,10 @@
     <div id="output"></div>
 
     <div class="toast-container position-fixed bottom-0 end-0 p-3">
-        <div id="liveToast" class="toast align-items-center" role="alert" aria-live="assertive" aria-atomic="true">
+        <div id="toastNotify" class="toast align-items-center" role="alert" aria-live="assertive" aria-atomic="true">
             <div class="d-flex">
                 <div class="toast-body">
-                    <label class="h5"><i class="fa-solid fa-check"></i> Sort done</label>
+                    <label class="h5"><i class="fa-solid fa-circle-check text-success"></i> Sort done</label>
                 </div>
                 <button type="button" class="btn-close me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
             </div>
