--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <label class="form-label h2 text-capitalize">sort algorithm simulator</label>
+    <label class="form-label h2 text-capitalize">sorting algorithms simulator</label>
     <div class="mb-2">
         <div class="form-check form-check-inline">
             <input class="form-check-input" type="radio" name="choiceSort" value="selection" id="choiceSelection"
@@ -44,10 +44,10 @@
     <div class="fs-6 mb-3 fw-light text-danger font-monospace"><i class="fa-duotone fa-asterisk"></i> This simulator sort by ascending order.</div>
     <div class="mb-3">
         <button type="button" class="btn btn-warning" id="btnReset">
-            <i class="fa-solid fa-rotate-right"></i> Reset
+            <i class="fa-solid fa-rotate-right"></i> Reset Data
         </button>
         <button type="button" class="btn btn-success" id="btnRunSort">
-            <i class="fa-solid fa-play"></i> Sort
+            <i class="fa-solid fa-play"></i> Run Sort
         </button>
     </div>
     <div>
@@ -69,7 +69,6 @@
             </div>
         </div>
     </div>
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
